fiddling with sign

--- a/doc/doc.tex
+++ b/doc/doc.tex
@@ -1035,6 +1035,9 @@ we're infalling, away from the sources), and blueshifts for horizon-grazing angl
 
 \section{Literature on ray tracing}
 
+some guy's web page with nice images, black hole ray tracing:
+\url{http://www.stephenbrooks.org/misc/blackhole/}
+
 Riazuelo
 \url{https://arxiv.org/abs/1511.06025} He never mentions anything about the code itself; presumably
 it's not open source. Paper says he only did Schwarzschild, a forthcoming paper will
