--- a/doc/doc.tex
+++ b/doc/doc.tex
@@ -1131,6 +1131,13 @@ Kassner, \url{arxiv.org/abs/1608.07511}; Grib,
 happens at the event horizon, and you don't see the infinite future of
 the universe.
 
+\subsection{Behavior of deflection at grazing}
+
+Empirically, for $1<r<\infty$, I find that $\beta+\ln(\alpha_\text{max}-\alpha)$ is a slowly
+varying function of $\alpha$ and of $\ln r$. This tames the behavior of the function
+$\beta(\alpha)$ so that we can interpolate accurately. There is a close physical analogy
+with a pendulum at large amplitudes, for which the period varies as an elliptic integral,
+whose asymptotic behavioris $K(1-\epsilon)\approx(1/2)\ln(2\epsilon)$.
 
 \subsection{Process of generating an image}
 
