--- a/doc/doc.tex
+++ b/doc/doc.tex
@@ -1134,7 +1134,9 @@ the universe.
 \subsection{Behavior of deflection at grazing}
 
 Empirically, for $1<r<\infty$, I find that $\beta+\ln(\alpha_\text{max}-\alpha)$ is a slowly
-varying function of $\alpha$ and of $\ln r$. This tames the behavior of the function
+varying function of $\alpha$ and of $\ln r$. This may break down at very large $\beta$; I need
+to study this more carefully. If this is correct, then it
+tames the behavior of the function
 $\beta(\alpha)$ so that we can interpolate accurately. There is a close physical analogy
 with a pendulum at large amplitudes, for which the period varies as an elliptic integral,
 whose asymptotic behavioris $K(1-\epsilon)\approx(1/2)\ln(2\epsilon)$.
